[package]
name = "controller"
version = "0.1.0"
authors = ["tns-engineer <admin@tns.money>"]
edition = "2018"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cosmwasm-std = "1.0.0"
cosmwasm-storage = "1.0.0"
 cw-storage-plus = "0.13.2"
cw2 = "0.13.2"
hex = "0.4.3"
schemars = "0.8.8"
serde = { version = "1.0.137", default-features = false, features = ["derive"] }
terra-cosmwasm = "3.0.0-beta"
terraswap = { version= "2.7.0"}
thiserror = "1.0.31"
tns = {version = "0.1.0", path = "../../packages/tns"}
unicode-segmentation = "1.8.0"

# ccosmwasm-std = "1.0.0"
# cosmwasm-storage = "1.0.0"
# cw-storage-plus = "0.13.2"
# cw0 = "0.10.3"
# cw2 = "0.13.2"
# cw-controllers = "0.13.2"
# schemars = "0.8.8"
# serde = { version = "1.0.137", default-features = false, features = ["derive"] }
# thiserror = "1.0.31"

[dev-dependencies]
cosmwasm-schema = "1.0.0"
